# Remote-Central

./: .gitignore  Cargo.toml  README.md
remote_cli/: Cargo.toml  example.env
remote_cli/src/: main.rs
remote_client/: Cargo.toml  example.env
remote_client/src/: main.rs
remote_core/: Cargo.toml
remote_core/src/: lib.rs
remote_server/: Cargo.toml  example.env
remote_server/src/: main.rs
