[package]
name = "remote_client"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
remote_core = { path = "../remote_core/" }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }